--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,58 @@
 body {
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto+Condensed:wght@300;400;700&display=swap');
+ 
+  :root {
+    --primary-dark: #5651e5;
+    --primary-light: #709dff;
+  }
+ 
+  * {
+    box-sizing: border-box;
     margin: 0;
-    padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-code {
+    padding: 0;
+  }
+  body {
+    font-family: "Poppins", sans-serif;
+  }
+ 
+  code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-:root {
-    --primary-color: #4caf50;
-    --secondary-color: #ff5722;
-    /* Define more colors or theme-related styles */
-}
-.margin-top-20 {
-    margin-top: 20px;
-}
-/* More utility classes */
-@media (max-width: 768px) {
-    /* Responsive styles */
-}
+      monospace;
+  ul {
+    list-style-type: none;
+  }
+ 
+  a {
+    text-decoration: none;
+  }
+ 
+  h1 {
+    font-size: 3.5rem;
+  }
+  h2 {
+    font-size: 2rem;
+  }
+ 
+  .container {
+    max-width: 1240px;
+    margin: auto;
+    padding: 0 1rem;
+  }
+ 
+ 
+ 
+ 
+ 
+  @media screen and (max-width: 940px) {
+    h1 {
+      font-size: 2.5rem;
+    }
+    h2 {
+      font-size: 1.5rem;
+    }
+  }}}
